Crear modulo de reservaciones
